doc: stesura abstract, intro e parte del background

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -16,3 +16,11 @@
 	note = {Accessed: 2024-12-19},
 	howpublished = {\url{https://www.python.org/}},
 }
+
+@misc{clingo_python_api,
+	author = {Potassco},
+	title = {Clingo Python API},
+	year = {2024},
+	url = {https://potassco.org/clingo/python-api/5.4/#},
+	note = {Accessed: 2024-12-19},
+}
