doc: stesura background e inizio modellazione

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -24,3 +24,18 @@
 	url = {https://potassco.org/clingo/python-api/5.4/#},
 	note = {Accessed: 2024-12-19},
 }
+
+@misc{unipr_qualita,
+	author = {Università di Parma},
+	title = {{U.O. Progettazione Didattica e Assicurazione della Qualità}},
+	year = {2024},
+	url = {https://trasparenza.unipr.it/ugov/organizationunit/191497},
+	note = {Accessed: 2024-12-19},
+}
+
+@misc{prof_dal_palu,
+	author = {Alessandro Dal Palu'},
+	title = {Comunicazione personale},
+	year = {2024},
+	note = {Informazioni ottenute tramite comunicazione personale},
+}
