--- a/tex/main.tex
+++ b/tex/main.tex
@@ -254,7 +254,7 @@ X {
 % al piu' X garanti a contratto
 % (analogo al precedente)
 
-% un docente scelto al piu una volta
+% un docente scelto al piu' una volta
 1 {
     garante(docente(Matricola), corso(Corso2)) :
     corso(Corso2),
