doc: aggiunta keyword `presidente`

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -40,7 +40,7 @@
                 insegna, insegnamento, ricercatore, contratto, indeterminato,
                 settore, di_riferimento, min_garanti, max_garanti, min_indeterminato,
                 max_ricercatori, max_contratto, min_riferimento, ideale,
-								non_ideale
+								non_ideale, presidente
 	},
 	backgroundcolor=\color{lightgray!20},
 }
