--- a/tex/main.tex
+++ b/tex/main.tex
@@ -23,7 +23,7 @@
 \renewcommand{\lstlistingname}{Codice}
 \lstdefinestyle{asp}{
   language=Prolog, % Linguaggio di base simile ad ASP
-  basicstyle=\ttfamily\small, % Font monospaziato
+  basicstyle=\ttfamily\footnotesize, % Font monospaziato
   keywordstyle=\color{Blue}\bfseries, % Parole chiave in grassetto blu
   commentstyle=\color{green!50!black}, % Commenti in verde
   stringstyle=\color{orange}, % Stringhe in arancione
@@ -40,11 +40,13 @@
                 insegna, insegnamento, ricercatore, contratto, indeterminato,
                 settore, di_riferimento, min_garanti, max_garanti, min_indeterminato,
                 max_ricercatori, max_contratto, min_riferimento, ideale,
-								non_ideale, presidente
+								non_ideale, presidente, scelta
 	},
 	backgroundcolor=\color{lightgray!20},
 }
 
+\usepackage{amsmath}
+\newcommand{\bigo}[1]{\ensuremath{O\left({#1}\right)}}
 
 \begin{document}
 
@@ -210,10 +212,11 @@ per facilitarne la visualizzazione.
 
 L'implementazione è stata progettata separando la logica principale per la
 generazione dei garanti accademici da quella relativa alle preferenze
-specifiche. Tra le preferenze considerate figurano:  \begin{itemize} \item
-	assegnazione automatica del ruolo di garante al presidente del corso;  \item
-massimizzazione del numero di docenti con contratto a tempo indeterminato;
-\item minimizzazione del numero di ricercatori e docenti a contratto coinvolti.
+specifiche. Tra le preferenze considerate figurano:  
+\begin{itemize}
+	\item assegnazione automatica del ruolo di garante al presidente del corso;
+	\item massimizzazione del numero di docenti con contratto a tempo indeterminato;
+	\item minimizzazione del numero di ricercatori e docenti a contratto coinvolti.
 \end{itemize}
 
 Nel Cod. \ref{lst:mainlp} viene illustrato il codice di \texttt{main.lp}. Per
@@ -228,31 +231,36 @@ questioni di ottimizzazione in fase di grounding si è preferito, ove possibile,
 } :-
     garante(docente(Matricola), corso(Corso)).
 
+scelta(docente(Matricola), corso(Corso)) :-
+	docente(Matricola),
+	insegna(docente(Matricola), insegnamento(_), corso(Corso)).
+
 % numero garanti
-M {
-    garante(docente(Matricola), corso(Corso)) :
-    docente(Matricola)
-} N :-
-    min_garanti(M, corso(Corso)),
-    max_garanti(N, corso(Corso)),
-    corso(Corso),
-    afferisce(corso(Corso), categoria_corso(Categoria)).
+M{
+	garante(docente(Matricola), corso(Corso)) :
+	scelta(docente(Matricola), corso(Corso))
+}N :-
+	min_garanti(M, corso(Corso)),
+  max_garanti(N, corso(Corso)),
+	corso(Corso),
+	afferisce(corso(Corso), categoria_corso(Categoria)).
 
 % almeno X garanti a tempo indeterminato
-X {
-    garante(docente(Matricola), corso(Corso)) :
-    garante(docente(Matricola), corso(Corso)),
-    indeterminato(docente(Matricola))
-} :-
-    min_indeterminato(X, corso(Corso)),
-    corso(Corso),
-    afferisce(corso(Corso), categoria_corso(Categoria)).
+X{
+	garante(docente(Matricola), corso(Corso)) :
+	garante(docente(Matricola), corso(Corso)),
+	indeterminato(docente(Matricola))
+}M :-
+	min_indeterminato(X, corso(Corso)),
+	max_garanti(M, corso(Corso)),
+	corso(Corso),
+	afferisce(corso(Corso), categoria_corso(Categoria)).
 
 % al piu' X garanti ricercatore
-% (analogo al precedente)
+% (analogo al precedente, senza minimo)
 
 % al piu' X garanti a contratto
-% (analogo al precedente)
+% (analogo al precedente, senza minimo)
 
 % un docente scelto al piu' una volta
 1 {
@@ -284,7 +292,6 @@ Le preferenze (Cod. \ref{lst:preferenzelp}) sono state espresse tramite l'utiliz
     \item priorità 1: minimizzare il numero di corsi per i quali è soddisfatto il predicato \texttt{non\_ideale/1}, i cui garanti comprendono almeno un ricercatore e/o un docente a contratto a tempo determinato.
 \end{itemize}
 
-\begin{center}
 \begin{lstlisting}[style=asp, caption={Codice ASP del file \texttt{preferenze.lp}.}, label={lst:preferenzelp}]
 #minimize{
 	-1@4,
@@ -331,14 +338,98 @@ non_ideale(corso(Corso)) :-
 	non_ideale(corso(Corso)) :
 	non_ideale(corso(Corso))
 }.
-
-#show ideale/1.
 \end{lstlisting}\todo{aggiornare con versione definitiva}
-\end{center}
 
 
+\subsection{Spazio delle soluzioni}
 
-\subsection{Complessità computazionale}
+Si analizza ora la complessità computazionale in termini di
+possibili configurazioni generate candidate ad essere soluzioni.
+
+\begin{lstlisting}[style=asp, caption={Frammento del file \texttt{main.lp}.}, label={lst:numero_garanti}]
+scelta(docente(Matricola), corso(Corso)) :-
+	docente(Matricola),
+	insegna(docente(Matricola), insegnamento(_), corso(Corso)).
+
+% possibili garanti
+M{
+	garante(docente(Matricola), corso(Corso)) :
+	scelta(docente(Matricola), corso(Corso))
+}N :-
+	min_garanti(M, corso(Corso)),
+	max_garanti(N, corso(Corso)),
+	corso(Corso),
+	afferisce(corso(Corso), categoria_corso(Categoria)).
+\end{lstlisting}
+Nel Cod. \ref{lst:numero_garanti} è illustrata la regola che controlla i garanti
+generati. Per ciascun corso di studi (95 in totale), esiste una sola versione ground che rende veri i
+predicati presenti nel corpo della regola; questo significa che il corpo verrà
+attivato esattamente una volta. Inoltre \texttt{M} e \texttt{N},
+rispettivamente minimo e massimo richiesti, coincidono; quindi l'aggregato
+presente in testa itera sulle possibili scelte per un determinato corso,
+costruendo insiemi di esattamente $N$ elementi. Indicati con $\Delta$ il numero
+medio delle possibili \texttt{scelta} ottenute da ogni corso e con $k$ il numero medio di garanti richiesti, si ottiene che questa regola genera circa
+\[
+	|\mathit{Corsi}| \cdot \binom{\Delta}{k}
+	= 95 \cdot \frac{\Delta !}{k! \cdot (\Delta - k)!}
+\]
+possibili answer set. In media risultano $\Delta = 39 \text{ e } k=10$, ossia
+circa  
+\[
+	95 \cdot \frac{39!}{10! \cdot 29!} = 95 \cdot \frac{39 \cdot 38 \cdot \ldots \cdot 30}{10!}
+	\approx
+	6 \cdot 10^{10}
+\]
+risultati. Lo spazio delle alternative da considerare cresce dunque fattorialmente rispetto al
+numero medio di insegnanti per ciascun corso.
+
+L’impiego di vincoli espressi tramite aggregati consente di escludere una
+significativa quantità di answer set non validi. Ad esempio, la seguente regola:
+\begin{lstlisting}[style=asp, caption={Frammento del file \texttt{main.lp}.}, label={lst:max_volte_garante}]
+% un docente e' scelto al piu' una volta
+0{
+	garante(docente(Matricola), corso(Corso2)) :
+	garante(docente(Matricola), corso(Corso2)),
+	Corso1!=Corso2
+}0 :-
+	garante(docente(Matricola), corso(Corso1)).
+\end{lstlisting}
+esclude tutti gli answer set in cui un docente risulta selezionato come garante
+per più di un corso. 
+
+Le regole riportate nel Cod. \ref{lst:massimi_minimi} stabiliscono invece limiti
+massimi e/o minimi per le sottocategorie di docenza, differenziate in base al
+tipo di contratto.
+\begin{lstlisting}[style=asp, caption={Frammento del file
+\texttt{main.lp}.}, label={lst:massimi_minimi}]
+% almeno X garanti a tempo indeterminato
+X{
+	garante(docente(Matricola), corso(Corso)) :
+	garante(docente(Matricola), corso(Corso)),
+	indeterminato(docente(Matricola))
+}M :-
+	min_indeterminato(X, corso(Corso)),
+	max_garanti(M, corso(Corso)),
+	corso(Corso).
+
+% al piu' X garanti ricercatore
+{
+	garante(docente(Matricola), corso(Corso)) :
+	garante(docente(Matricola), corso(Corso)),
+	ricercatore(docente(Matricola))
+}X :-
+	max_ricercatori(X, corso(Corso)),
+	corso(Corso).
+
+% al piu' X garanti a contratto
+{
+	garante(docente(Matricola), corso(Corso)) :
+	garante(docente(Matricola), corso(Corso)),
+	contratto(docente(Matricola))
+}X :-
+	max_contratto(X, corso(Corso)),
+	corso(Corso).
+\end{lstlisting}
 
 \section{Risultati}
 
