--- a/tex/main.bib
+++ b/tex/main.bib
@@ -39,3 +39,11 @@
 	year = {2024},
 	note = {Informazioni ottenute tramite comunicazione personale},
 }
+
+@article{gebser2015potassco,
+  title={Potassco user guide},
+  author={Gebser, Martin and Kaminski, Roland and Kaufmann, Benjamin and Lindauer, Marius and Ostrowski, Max and Romero, Javier and Schaub, Torsten and Thiele, Sven and Wanko, Philipp},
+  journal={Institute for Informatics, University of Potsdam, second edition edition},
+  volume={69},
+  year={2015}
+}
