--- a/tex/modellazione.tex
+++ b/tex/modellazione.tex
@@ -116,7 +116,7 @@ R {
 \end{lstlisting}
 \end{center}
 
-Le preferenze (Cod. \ref{lst:preferenzelp}) sono state espresse tramite l'utilizzo di \textit{weak constraint}. In particolare, sono stati definiti quattro livelli di priorità\footnote{Si ricorda che l'ordine di importanza è inverso rispetto al livello di priorità indicato.} sui quali intervenire:
+Le preferenze (Cod. \ref{lst:preferenzelp}) sono state espresse tramite l'utilizzo di \textit{weak constraints}. In particolare, sono stati definiti quattro livelli di priorità\footnote{Si ricorda che l'ordine di importanza è inverso rispetto al livello di priorità indicato.} sui quali intervenire:
 \begin{itemize}
     \item priorità 4: massimizzare l'assegnazione dei presidenti di corso come garanti;
     \item priorità 3: massimizzare il numero di corsi per i quali è soddisfatto il predicato \texttt{ideale/1}, dove i garanti sono esclusivamente docenti a contratto indeterminato;
