--- a/tex/risultati.tex
+++ b/tex/risultati.tex
@@ -68,7 +68,7 @@ ricerca (senza successo) di un modello migliore. Il tempo indicato nel campo \te
 l'istante in cui è stato trovato l'ultimo modello e la terminazione \cite{gebser2015potassco}.
 
 \begin{lstlisting}[language=bash, captionpos=b, 
-    caption={Statistiche clingo per il corso 3024}, 
+    caption={Statistiche clingo per il corso 3024.}, 
     label={lst:stat_3024},
     backgroundcolor=\color{lightgray!20},
     basicstyle=\ttfamily\footnotesize]
