doc: aggiunti output significativi + minors

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -51,18 +51,18 @@
 
 \begin{document}
 
-\title{Ottimizzazione Garanti accademici}
+% \title{Ottimizzazione garanti accademici}
+\title{Ottimizzazione Garanti Accademici}
 
 \author{\IEEEauthorblockN{Manuel Di Agostino}
 \IEEEauthorblockA{\textit{Università degli studi di Parma} \\
 Parma, Italia\\
 manuel.diagostino@studenti.unipr.it}\\
 
-\IEEEauthorblockN{Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
+\IEEEauthorblockN{Leonardo Ongari}
+\IEEEauthorblockA{\textit{Università degli studi di Parma} \\
+Cremona, Italia \\
+leonardo.ongari@studenti.unipr.it}
 }
 
 \maketitle
