--- a/tex/modellazione.tex
+++ b/tex/modellazione.tex
@@ -40,7 +40,7 @@ calcolare gli answer set. Successivamente, il solver Clingo viene eseguito
 tramite Python e i risultati ottenuti vengono convertiti in formato tabellare
 per facilitarne la visualizzazione.
 
-\subsection{Implementazione}
+\subsection{Implementazione} \label{implementazione}
 
 L'implementazione è stata progettata separando la logica principale per la
 generazione dei garanti accademici da quella relativa alle preferenze
